--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -1,41 +1,41 @@
 * {
-    font-family: MartianMono Nerd Font;
+    font-family: 'SF Pro';
+    font-weight: bold;
+    font-size: 14px;
     color: #bdbdbd;
     background: transparent;
 }
 
 #window {
-    background: rgba(8, 8, 8, 0.8);
-    margin: auto;
-    padding: 5px;
+    background: rgba(8, 8, 8, 0.95);
     border-radius: 10px;
-    border: 2px solid #cd1f48;
+    border: 2px solid #fc5453;
 }
 
 #input {
     padding: 4px 10px;
-    margin-bottom: 10px;
-    margin-top: 5px;
     border-radius: 10px;
+    box-shadow: none;
 }
 
 #outer-box {
-    padding: 10px;
+    padding: 2px;
 }
 
 #img {
     margin-right: 10px;
+    width: 20px;
+    height: 20px;
 }
 
 #entry {
+    font-size: 16px;
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 0px;
+    border: none;
+    outline: none;
 }
 
 #entry:selected {
     background-color: #323437;
-}
-
-#text {
-    margin: 2px;
 }
