--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -19,11 +19,11 @@
     border-radius: 10px;
     box-shadow: none;
     margin: 8px;
-    border: 2px solid rgba(0,0,0,0);
+    border: 2px solid rgba(0, 0, 0, 0);
 }
 
 #input:focused {
-    background-color: #393939;
+    background-color: #343434;
     border: 2px solid #637c94;
 }
 
@@ -33,8 +33,8 @@
 }
 
 #inner-box {
-    padding: 8px; 
-    border-top: 1px solid #4b4b4b;
+    padding: 8px;
+    border-top: 1px solid #343434;
 }
 
 #img {
@@ -50,5 +50,5 @@
 }
 
 #entry:selected {
-    background-color: #3a3a3a;
+    background-color: #343434;
 }
