--- a/config/wofi/style.css
+++ b/config/wofi/style.css
@@ -7,6 +7,7 @@
 @define-color bg2 #343434;
 @define-color bg3 #919191;
 
+@define-color blackt rgba(8, 8, 8, 0.75);
 @define-color black #000000;
 @define-color border #343434;
 @define-color disabled #303030;
@@ -26,20 +27,18 @@
     font-weight: bold;
     font-size: 14px;
     color: @fg;
-    background: transparent;
     border: none;
     outline: none;
 }
 
 #window {
-    background-color: @bgt;
-    border-radius: 8px;
-    outline: 1px solid @fg2;
+    border-radius: 0px;
+    border: 1px solid @fg2;
 }
 
 #input {
     padding: 2px 10px;
-    border-radius: 10px;
+    border-radius: 8px;
     box-shadow: none;
     margin: 8px;
     font-size: 18px;
@@ -48,7 +47,6 @@
 }
 
 #input:focused {
-    background-color: @highlight;
     border: 2px solid @focused;
 }
 
@@ -74,6 +72,4 @@
     border-radius: 8px;
 }
 
-#entry:selected {
-    background-color: @highlight;
-}
+#entry:selected {}
