--- a/themes/adw-gtk3-dark/gtk-4.0/gtk-dark.css
+++ b/themes/adw-gtk3-dark/gtk-4.0/gtk-dark.css
@@ -1,5 +1,6 @@
 /* GTK NAMED COLORS ---------------- use responsibly! */
-@define-color accent_bg_color @blue_3;
+@define-color newbg #080808;
+@define-color accent_bg_color @dark_3;
 @define-color accent_fg_color white;
 @define-color accent_color #78aeed;
 @define-color destructive_bg_color @red_4;
@@ -14,35 +15,35 @@
 @define-color error_bg_color @red_4;
 @define-color error_fg_color white;
 @define-color error_color #ff7b63;
-@define-color window_bg_color #242424;
+@define-color window_bg_color @newbg;
 @define-color window_fg_color white;
-@define-color view_bg_color #1e1e1e;
+@define-color view_bg_color @newbg;
 @define-color view_fg_color white;
-@define-color headerbar_bg_color #303030;
+@define-color headerbar_bg_color @newbg;
 @define-color headerbar_fg_color white;
 @define-color headerbar_border_color white;
 @define-color headerbar_backdrop_color @window_bg_color;
 @define-color headerbar_shade_color rgba(0, 0, 0, 0.36);
 @define-color headerbar_darker_shade_color rgba(0, 0, 0, 0.9);
-@define-color sidebar_bg_color #303030;
+@define-color sidebar_bg_color @newbg;
 @define-color sidebar_fg_color white;
-@define-color sidebar_backdrop_color #2a2a2a;
+@define-color sidebar_backdrop_color @newbg;
 @define-color sidebar_shade_color rgba(0, 0, 0, 0.25);
 @define-color sidebar_border_color rgba(0, 0, 0, 0.36);
-@define-color secondary_sidebar_bg_color #2a2a2a;
+@define-color secondary_sidebar_bg_color @newbg;
 @define-color secondary_sidebar_fg_color white;
-@define-color secondary_sidebar_backdrop_color #272727;
+@define-color secondary_sidebar_backdrop_color @newbg;
 @define-color secondary_sidebar_shade_color rgba(0, 0, 0, 0.25);
 @define-color secondary_sidebar_border_color rgba(0, 0, 0, 0.36);
 @define-color card_bg_color rgba(255, 255, 255, 0.08);
 @define-color card_fg_color white;
 @define-color card_shade_color rgba(0, 0, 0, 0.36);
-@define-color dialog_bg_color #383838;
+@define-color dialog_bg_color @newbg;
 @define-color dialog_fg_color white;
-@define-color popover_bg_color #383838;
+@define-color popover_bg_color @newbg;
 @define-color popover_fg_color white;
 @define-color popover_shade_color rgba(0, 0, 0, 0.25);
-@define-color thumbnail_bg_color #383838;
+@define-color thumbnail_bg_color @newbg;
 @define-color thumbnail_fg_color white;
 @define-color shade_color rgba(0, 0, 0, 0.25);
 @define-color scrollbar_outline_color rgba(0, 0, 0, 0.5);
