--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -10,7 +10,7 @@
 @define-color disabled #303030;
 @define-color border #343434;
 
-@define-color accent #74b2ff;
+@define-color accent #235278;
 
 * {
     border: none;
@@ -22,15 +22,7 @@
     min-width: 8px;
 }
 
-.bar3 {
-    font-size: 10px;
-}
-
-.bar1 {
-    font-size: 1px;
-}
-
-.bar2 {
+.bar {
     font-size: 10px;
 }
 
@@ -42,20 +34,12 @@ window#waybar {
     padding-right: 8px;
 }
 
-.modules-left,
-.modules-right {}
-
 #tray {
     padding: 0 8px;
 }
 
 #tray>* {
     padding: 0 4px;
-}
-
-#custom-tray-icon {
-    background: @fg2;
-    min-width: 14px;
 }
 
 /*-----modules indv----*/
@@ -88,5 +72,6 @@ window#waybar {
 
 
 #workspaces button.active * {
-    color: @accent;
+    color: @fg;
+    background: @accent;
 }
