--- a/themes/adw-gtk3-blue/gtk-3.0/gtk-dark.css
+++ b/themes/adw-gtk3-blue/gtk-3.0/gtk-dark.css
@@ -1,7 +1,8 @@
 @define-color bg #1e1e1e;
 @define-color fg #fefefe;
 @define-color fg2 #9e9e9e;
-@define-color ac #285577;
+@define-color ac #62a0ea;
+@define-color i3 #285577;
 @define-color ds #5f676a;
 
 @define-color black #000000;
