--- a/themes/adw-gtk3-custom/gtk-4.0/gtk.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk.css
@@ -1,7 +1,7 @@
 @define-color bg #1e1e1e;
 @define-color fg #fefefe;
 @define-color fg2 #9e9e9e;
-@define-color ac #9676C5;
+@define-color ac #a46c3c;
 @define-color i3 #285577;
 @define-color ds #5f676a;
 
