--- a/themes/adw-gtk3-custom/gtk-3.0/gtk-dark.css
+++ b/themes/adw-gtk3-custom/gtk-3.0/gtk-dark.css
@@ -1,9 +1,7 @@
-@define-color bg #1e1e1e;
-@define-color fg #fefefe;
-@define-color fg2 #9e9e9e;
-@define-color ac #a46c3c;
-@define-color i3 #285577;
-@define-color ds #5f676a;
+@define-color bg #0B0A0A;
+@define-color fg #E7EDE6;
+@define-color ac #42322B;
+@define-color ds #232224;
 
 @define-color black #000000;
 @define-color danger #ed333b;
