--- a/themes/adw-gtk3-custom/gtk-4.0/gtk.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk.css
@@ -1,7 +1,7 @@
 @define-color bg #0B0A0A;
 @define-color fg #E7EDE6;
-@define-color ac #42322B;
-@define-color ds #232224;
+@define-color ac #BF7C53;
+@define-color ds #8A8A7E;
 
 @define-color black #000000;
 @define-color danger #ed333b;
