--- a/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
@@ -1,7 +1,7 @@
-@define-color bg #0B0A0A;
-@define-color fg #E7EDE6;
-@define-color ac #76946A;
-@define-color ds #8A8A7E;
+@define-color bg #1E1E1E;
+@define-color fg #FEFEFE;
+@define-color ac #C34043;
+@define-color ds #303030;
 
 @define-color black #000000;
 @define-color danger #ed333b;
