--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -1,9 +1,3 @@
-@define-color ac #7daea3;
-@define-color fg #fbf1c7;
-@define-color bg #282524;
-@define-color ds #7c9791;
-@define-color black #000000;
-
 * {
     font-weight: 600;
     border: none;
@@ -126,6 +120,7 @@ window#waybar {
 
 #workspaces button:not(.empty) * {
     color: @fg;
+    text-shadow: 1px 1px 2px @black;
 }
 
 #battery.warning {
