--- a/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
@@ -1,7 +1,7 @@
-@define-color bg #282828;
-@define-color fg #ebdbb2;
-@define-color ac #83a598;
-@define-color ds #3c3836;
+@define-color bg #282524;
+@define-color fg #fbf1c7;
+@define-color ac #7daea3;
+@define-color ds #555555;
 
 @define-color black #000000;
 @define-color danger #ed333b;
