--- a/themes/adw-gtk3-custom/gtk-4.0/gtk.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk.css
@@ -1,7 +1,7 @@
-@define-color bg #282524;
-@define-color fg #fbf1c7;
-@define-color ac #7daea3;
-@define-color ds #555555;
+@define-color bg #1b1b1b;
+@define-color fg #ebdbb2;
+@define-color ac #8ec07c;
+@define-color ds #7c6f64;
 
 @define-color black #000000;
 @define-color danger #ed333b;
