--- a/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
+++ b/themes/adw-gtk3-custom/gtk-4.0/gtk-dark.css
@@ -1,7 +1,7 @@
-@define-color bg #1b1b1b;
-@define-color fg #ebdbb2;
-@define-color ac #8ec07c;
-@define-color ds #7c6f64;
+@define-color bg #181616;
+@define-color fg #C5C9C5;
+@define-color ac #D7AF87;
+@define-color ds #8A9A7B;
 
 @define-color black #000000;
 @define-color danger #ed333b;
